# faceEmotionCppLinux

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  setting.json
include/: common.h  data_dump.hpp  dbProxy.h  faceEngine.h  personInfo.h  recognize.h  utils.h
pythonUsage/: classify_server.py  detect_register_recognize_who.ipynb  emotion.model.mobilenetV2_x75_0.92_20200907.tflite  emotion.model.mobilenetV2_x75_1.00_20200913.tflite  emotion.tflite  extractFace.py  faceEmotion.ipynb  predict_emotion.ipynb  prepare_train_faces.ipynb  recognize.py  register.py  setting.json  start_jupyter.sh  test.py  train_emotions.ipynb
pythonUsage/emotion.model/: saved_model.pb
pythonUsage/emotion.model.mobilenetV2_x75_1.00_20200913/variables/: variables.index
pythonUsage/emotion.model/variables/: variables.index
res/: env.sh  setting.json  start_recognize.sh  start_register.sh
source/: dbProxy.cpp  faceEngine.cpp
source/libFaceEmotion/: libFaceEmotion.cpp
source/python/: test.py
source/recognize/: recognize.cpp
source/register/: register.cpp
